header scss 작업 완료 및 header.jsx 가독성 높이기 작업중

--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -9,6 +9,8 @@
   --black400: #000;
   --black500: #000;
 
+  --blackAlpha100: #11111125;
+
   --white: #fff;
   --white100: #efefef;
   --white200: #fff;
