--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -33,7 +33,7 @@
             a{
                 font-size: 1rem;
                 display: block;
-                padding: 0.9rem 2rem 0.9rem 50px;
+                padding: 0.9rem 2rem 0.9rem 3.125rem;
                 margin: 0 0.625rem;
                 border-radius: 40px;
                 position: relative;
@@ -62,14 +62,40 @@
     }
 
     .keyword {
+        padding: 1.25rem;
         li {
             a{
+                display: inline-block;
+                padding: 7px 15px;
+                border: 1px solid var(--black200);
+                font-size: 0.8rem;
+                border-radius: 40px;
+                margin: 3px 1px;
             }
         }
     }
 }
 
-.header__sns {}
+.header__sns {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 260px;
+    text-align: center;
+    padding: 15px 0 10px;
+    background-color: var(--blackAlpha100);
+    backdrop-filter: blur(10px);
+
+    li {
+        display: inline-block;
+    
+        a {
+            padding: 5px 7px;
+            display: inline-block;
+        }
+    }
+}
 
 @keyframes ani {
     0% {
