--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -64,6 +64,7 @@
     .keyword {
         padding: 1.25rem;
         li {
+            display: inline-block;
             a{
                 display: inline-block;
                 padding: 7px 15px;
