--- a/src/assets/scss/section/_layout.scss
+++ b/src/assets/scss/section/_layout.scss
@@ -16,6 +16,11 @@
 }
 #footer {
     text-align: center;
-    background-color: #333;
-    padding: 20px 20px 20px 260px;
+    background-color: var(--black200);
+    border-top: 1px solid var(--black100);
+    padding: 20px;
+    margin-left: 260px;
+    width: calc(100% - 260px);
+    color: var(--black400);
+    font-size: 0.8rem;
 }
