12. 추천 영상 작업29분9초

--- a/src/assets/scss/setting/_common.scss
+++ b/src/assets/scss/setting/_common.scss
@@ -2,3 +2,60 @@ body {
   background-color: var(--black);
   color: var(--white);
 }
+
+// 섹션 공통 요소
+section {
+  padding: 40px;
+
+
+  @media (max-width: 800){
+    padding: 20px;
+  }
+
+  h2 {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+  }
+}
+
+// 마우스 오버 아이콘
+.play__icon{
+  a{
+    position: relative;
+    display: block;
+    cursor: pointer;
+    width: 100%;
+
+    &::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-color: #0000004f;
+      position: absolute;
+      left: 0;
+      top: 0;
+      transition: background-color 0.3s;
+    }
+
+    &:hover::before{
+      background-color: #00000000;
+    }
+
+    &::after{
+      content: "";
+      width: 80px;
+      height: 80px;
+      background: #000 url(../../img/icon/play.svg) no-repeat center;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      transition: background-color 0.3s;
+    }
+
+    &:hover::after {
+      background-color: #00000000;
+    }
+  }
+}
