--- a/src/assets/scss/section/_today.scss
+++ b/src/assets/scss/section/_today.scss
@@ -22,10 +22,12 @@
     .title{
         font-size: 2rem;
         margin-bottom: 1rem;
+        @include line-one;
     }
     .desc{
         margin-bottom: 1rem;
         color: var(--white200);
+        @include line(4);
     }
     .info{
         .author{
@@ -43,4 +45,14 @@
     }
 }
 
-        
+@media (max-width: 1700px){
+    .today__inner {
+        .today__thumb {
+            width: 500px;
+        }
+        .today__text {
+            width: calc(100% - 500px);
+        }
+    }
+    
+}
