--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -9,7 +9,12 @@
   --black400: #444;
   --black500: #000;
 
+  --blackAlpha: #11111100;
   --blackAlpha100: #11111125;
+  --blackAlpha200: #1111114d;
+  --blackAlpha300: #11111191;
+  --blackAlpha400: #111111c3;
+  --blackAlpha500: #111111;
 
   --white: #fff;
   --white100: #efefef;
