--- a/src/assets/scss/setting/_common.scss
+++ b/src/assets/scss/setting/_common.scss
@@ -30,7 +30,7 @@ section {
       content: '';
       width: 100%;
       height: 100%;
-      background-color: #0000004f;
+      background-color: var(--blackAlpha200);
       position: absolute;
       left: 0;
       top: 0;
@@ -38,14 +38,14 @@ section {
     }
 
     &:hover::before{
-      background-color: #00000000;
+      background-color: var(--blackAlpha);
     }
 
     &::after{
       content: "";
       width: 80px;
       height: 80px;
-      background: #000 url(../../img/icon/play.svg) no-repeat center;
+      background: var(--black400) url(../../img/icon/play.svg) no-repeat center;
       position: absolute;
       left: 50%;
       top: 50%;
@@ -55,7 +55,7 @@ section {
     }
 
     &:hover::after {
-      background-color: #00000000;
+      opacity: 1;
     }
   }
 }
